# visionaray

./: .appveyor.yml  .editorconfig  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt  array_ref.h  blocking_queue.h  bvh_outline_renderer.cpp  bvh_outline_renderer.h  call_kernel.h  cfile.h  config.h.in  cpu_buffer_rt.h  cpu_buffer_rt.inl  cuda.cpp  cuda.h  dds_image.cpp  dds_image.h  exception.h  export.h  exr_image.cpp  exr_image.h  fbx_loader.cpp  fbx_loader.h  file_base.cpp  file_base.h  gl_debug_callback.cpp  gl_debug_callback.h  gpu_buffer_rt.h  gpu_buffer_rt.inl  hdr_image.cpp  hdr_image.h  host_device_rt.cpp  host_device_rt.h  image.cpp  image.h  image_base.cpp  image_base.h  inifile.cpp  inifile.h  jpeg_image.cpp  jpeg_image.h  lock_free_queue.h  make_materials.h  (+46 more)
src/common/CmdLine/: .clang-format  .gitignore  LICENSE  NOTICE  README.md  premake4.lua
src/common/CmdLine/src/: CmdLine.cpp  CmdLineUtil.cpp
src/common/CmdLine/test/: CmdLineQt.h  PrettyPrint.h  Test.cpp
src/common/async/: connection.cpp  connection.h  connection_manager.cpp  connection_manager.h  message.cpp  message.h
src/common/cuda/: graphics_resource.cpp  graphics_resource.h  pixel_pack_buffer.cpp  pixel_pack_buffer.h
src/common/gl/: compositing.cpp  compositing.h  handle.cpp  handle.h  program.cpp  program.h  shader.cpp  shader.h  types.h  util.cpp  util.h
src/common/input/: cocoa.h  exception.h  glut.h  key_event.h  keyboard.cpp  keyboard.h  mouse.h  mouse_event.h  qt.h  sdl2.h  space_mouse.cpp  space_mouse.h
src/common/manip/: arcball.cpp  arcball.h  arcball_manipulator.cpp  arcball_manipulator.h  camera_manipulator.cpp  camera_manipulator.h  first_person_manipulator.cpp  first_person_manipulator.h  model_manipulator.cpp  model_manipulator.h  pan_manipulator.cpp  pan_manipulator.h  rotate_manipulator.cpp  rotate_manipulator.h  translate_manipulator.cpp  translate_manipulator.h  zoom_manipulator.cpp  zoom_manipulator.h
src/common/sg/: io.h  material.h
src/conv/: CMakeLists.txt  conv.cpp
src/cover/: CMakeLists.txt  drawable.cpp  drawable.cu  drawable.h  state.h  visionaray_plugin.cpp  visionaray_plugin.h
src/cover/kernels/: bvh_costs_kernel.h  normals_kernel.h  tex_coords_kernel.h
src/examples/: CMakeLists.txt
src/examples/ao/: CMakeLists.txt  README.md  main.cpp
src/examples/ao_gpu/: CMakeLists.txt  main.cu
src/examples/cuda_unified_memory/: CMakeLists.txt  main.cu
src/examples/generic_primitive/: CMakeLists.txt  main.cpp
src/examples/intersector/: CMakeLists.txt  main.cpp
src/examples/juggler/: CMakeLists.txt  main.cpp
src/examples/minimal/: CMakeLists.txt  main.cpp
src/examples/multi_hit/: CMakeLists.txt  README.md  main.cpp
src/examples/multi_volume/: CMakeLists.txt  README.md  main.cpp
src/examples/nanort/: CMakeLists.txt  README.md  main.cpp
src/examples/opengl_interop/: CMakeLists.txt  main.cu
src/examples/phantom/: CMakeLists.txt  main.cpp
src/examples/raytracinginoneweekend/: CMakeLists.txt  main.cpp
src/examples/raytracinginoneweekend_cuda/: CMakeLists.txt  main.cu
src/examples/rrt/: CMakeLists.txt  links.txt  main.cpp
src/examples/smallpt/: CMakeLists.txt  main.cpp  main.cu
src/examples/texture/: CMakeLists.txt  main.cpp  make_textures.h  quad.h  rechenkaestchen.tga
src/examples/texture3d/: CMakeLists.txt  README.md  main.cpp
src/examples/volume/: CMakeLists.txt  README.md  main.cpp
src/examples/volumetric_pathtracer/: CMakeLists.txt  README.md  main.cpp
src/examples/wavefront_pathtracer/: CMakeLists.txt  main.cpp  parallel_for.h  pathtracer.h
src/viewer/: CMakeLists.txt  README.md  array_ref.h  bvh_costs.h  call_kernel.h  default_scenes.h  host_device_rt.cpp  host_device_rt.cu  host_device_rt.h  host_device_sched.h  host_device_sched.inl  image.h  jpeg_image.cpp  jpeg_image.h  model.h  obj_loader.cpp  obj_loader.h  render.h  render_bvh.h  render_generic_material.cpp  render_generic_material.cu  render_instances.cpp  render_instances.cu  render_instances_ptex.cpp  render_plastic.cpp  render_plastic.cu  render_state.h  timer.h  viewer.cpp  viewer.cu
src/viewer/input/: exception.h  keyboard.h  mouse.h
src/viewer/manip/: arcball_manipulator.cpp  arcball_manipulator.h  camera_manipulator.cpp  camera_manipulator.h  pan_manipulator.cpp  pan_manipulator.h  zoom_manipulator.cpp  zoom_manipulator.h
src/visionaray/: CMakeLists.txt  camera.cpp  config.h.in  exception.cpp  pixel_format.cpp  pixel_unpack_buffer_rt.cpp  render_target.cpp  util.cpp  util.h
src/visionaray/cuda/: fill.cu  graphics_resource.cpp  graphics_resource.h  pixel_pack_buffer.cpp  pixel_pack_buffer.cu
src/visionaray/detail/spd/: d65.cpp
src/visionaray/gl/: bvh_outline_renderer.cpp  compositing.cpp  debug_callback.cpp  handle.cpp  handle.h  program.cpp  shader.cpp  util.cpp  util.h
test/: CMakeLists.txt  generic_material.cpp  hip_random_test.hip  hip_test.hip  matrix.cpp  render_target.cpp  swizzle.cpp  texture.cu  variant.cpp
test/compile_failure_tests/: CMakeLists.txt
test/compile_failure_tests/algo/: CMakeLists.txt  counting_sort.cpp
test/compile_failure_tests/packing/: CMakeLists.txt  generic_material.cpp  intersect.cpp  material.cpp  shade_record.cpp  spectrum.cpp  surface.cpp  vector.cpp
test/compile_failure_tests/simd/: CMakeLists.txt  get_color.cpp  get_normal.cpp  math.cpp  trans.cpp
test/math/: norm.cpp  rect.cpp  simd.cpp  sse.cpp
test/unittests/: CMakeLists.txt  array.cpp  array.cu  generic_material.cpp  generic_primitive.cpp  get_normal.cpp  material.cpp  medium.cpp  morton.cpp  phase_function.cpp  render_target.cpp  sampling.cpp  swizzle.cpp  texture.cu  version.cpp
test/unittests/bvh/: build.cpp  traverse.cpp
test/unittests/common/: sg.cpp
test/unittests/cuda/: cast.cu
test/unittests/detail/: algorithm.cpp  parallel_algorithm.cpp
test/unittests/math/: array.cpp  intersect.cpp  matrix.cpp  norm.cpp  ray.cpp  rectangle.cpp  serialization.cpp  simd.cpp  snorm.cpp  triangle.cpp  unorm.cpp  vector.cpp
test/unittests/math/simd/: gather.cpp  (+3 more)
(+408 files in other folders)
