# This file is distributed under the MIT license.
# See the LICENSE file for details.

if (VSNRAY_ENABLE_CUDA_STYLE_THREAD_INTROSPECTION)
    add_definitions(-DVSNRAY_TILED_SCHED_CUDA_STYLE_THREAD_INTROSPECTION=1)
endif()

add_subdirectory(ao)
add_subdirectory(cuda_unified_memory)
add_subdirectory(generic_primitive)
add_subdirectory(intersector)
add_subdirectory(juggler)
#add_subdirectory(minimal)
add_subdirectory(multi_volume)
if (VSNRAY_ENABLE_CUDA)
add_subdirectory(opengl_interop)
endif()
add_subdirectory(phantom)
add_subdirectory(raytracinginoneweekend)
if (VSNRAY_ENABLE_CUDA)
add_subdirectory(raytracinginoneweekend_cuda)
endif()
add_subdirectory(smallpt)
add_subdirectory(texture3d)
add_subdirectory(volume)
add_subdirectory(volumetric_pathtracer)
